# proteus

./: .gitignore  BENCHMARKS.md  Cargo.toml  GETTING_STARTED.md  LICENSE-APACHE  LICENSE-MIT  Makefile  PLANNING.md  README.md  REVIEW-2.md  REVIEW.md  ROADMAP.md  VISION.md
.github/workflows/: ci.yml
crates/proteus-context/: Cargo.toml
crates/proteus-context/src/: adaptation.rs  environment.rs  inference.rs  lib.rs  role.rs  user_context.rs
crates/proteus-gpu/: Cargo.toml
crates/proteus-gpu/src/: context.rs  error.rs  lib.rs
crates/proteus-render/: Cargo.toml
crates/proteus-render/assets/: LICENSE-DejaVuSans.txt
crates/proteus-render/src/: blur.rs  font_atlas.rs  lib.rs  material.rs  mesh.rs  pipeline.rs  scene.rs  static_texture.rs  texture_registry.rs  transition_atlas.rs
crates/proteus-render/src/shaders/: blur.wgsl  quad.wgsl
crates/proteus-render/tests/: headless_render.rs  text_rendering.rs
crates/proteus-shell-native/: Cargo.toml
crates/proteus-shell-native/src/: main.rs  mp4_player.rs
crates/proteus-shell-web/: Cargo.toml
crates/proteus-shell-web/src/: lib.rs
crates/proteus-shell-web/www/: index.html
crates/proteus-ui/: Cargo.toml
crates/proteus-ui/src/: collect.rs  component.rs  context_bus.rs  effects.rs  form.rs  hierarchy.rs  image.rs  input.rs  lib.rs  schedule.rs  signal.rs  text.rs  topology.rs  transition.rs  video.rs
crates/proteus-ui/tests/: hierarchy.rs  hit_test.rs  render_instances.rs  topology_systems.rs  transition_systems.rs
scripts/: fetch-assets.sh
scripts/git-hooks/: pre-push
