[workspace]
resolver = "2"

members = [
    "crates/proteus-gpu",
    "crates/proteus-render",
    "crates/proteus-ui",
    "crates/proteus-context",
    "crates/proteus-shell-web",
    "crates/proteus-shell-native",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Blue <isaac.chellin@gmail.com>"]
license = "TBD"
repository = "https://github.com/isaacchellin/proteus"

[workspace.dependencies]
# GPU
wgpu = { version = "22", features = ["wgsl"] }
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"

# Async / Runtime
pollster = "0.4"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# WASM
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

# Native windowing
winit = "0.30"

# Error handling
thiserror = "2"
anyhow = "1"
