[workspace]
resolver = "2"

members = [
    "crates/proteus-gpu",
    "crates/proteus-render",
    "crates/proteus-ui",
    "crates/proteus-shell-web",
    "crates/proteus-shell-native",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Blue <isaac.chellin@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/isaacchellin/proteus"

[workspace.dependencies]
# GPU
# "webgl" is required for the WebGL2 backend on wasm — without it, web builds are WebGPU-only
wgpu = { version = "29", features = ["wgsl", "webgl"] }
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
etagere = "0.3"  # shelf-based 2D atlas packing (used by TextureRegistry)
fontdue = "0.8"  # pure-Rust font rasterization — no system font dependencies
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }  # static image decode (M9.7) — pure Rust, works on native and wasm32

# ECS
bevy_ecs = "0.18"  # standalone ECS runtime — does not pull in the full Bevy engine
slotmap = "1"      # O(1) stable-key storage with generation safety (TextureRegistry, SignalRegistry)

# Async / Runtime
pollster = "0.4"   # native-only: blocks on wgpu async init — not used on wasm

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"  # JsValue <-> Rust deserialization at the WASM boundary

# Logging
log = "0.4"
env_logger = "0.11"   # native logging backend
wasm-logger = "0.2"   # wasm logging backend — routes log:: macros to console.log

# WASM
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"  # routes Rust panics to console.error on wasm

# Native windowing
winit = "0.30"

# Error handling
thiserror = "2"
anyhow = "1"
