[package]
name = "proteus-context"
description = "Layer 3: user context model, adaptation rule engine, optional AI inference adapter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
