[package]
name = "proteus-render"
description = "Layer 1: scene graph, instanced render pipeline, transition pipeline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
proteus-gpu = { path = "../proteus-gpu" }
wgpu = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
# pollster: blocks on wgpu async init inside integration tests
pollster = { workspace = true }
# wgpu re-exported through proteus-render but needs explicit dev-dep for tests/
wgpu = { workspace = true }
