[package]
name = "proteus-shell-native"
description = "Layer 3: native windowing shell (winit + wgpu)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "proteus"
path = "src/main.rs"

[dependencies]
proteus-gpu = { path = "../proteus-gpu" }
proteus-render = { path = "../proteus-render" }
proteus-ui = { path = "../proteus-ui" }
glam = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
