[package]
name = "proteus-shell-web"
description = "Layer 4: WebGPU/WASM web shell with TypeScript bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
proteus-gpu = { path = "../proteus-gpu" }
proteus-render = { path = "../proteus-render" }
proteus-ui = { path = "../proteus-ui" }
proteus-context = { path = "../proteus-context" }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["Window", "Document", "HtmlCanvasElement", "Navigator"] }
js-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
