[package]
name = "proteus-shell-web"
description = "Layer 3: WebGL2/WebGPU WASM shell, TypeScript bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
proteus-gpu = { path = "../proteus-gpu" }
proteus-render = { path = "../proteus-render" }
proteus-ui = { path = "../proteus-ui" }
wgpu = { workspace = true }
glam = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["Window", "Document", "HtmlCanvasElement", "Navigator"] }
js-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }
log = { workspace = true }
wasm-logger = { workspace = true }
console_error_panic_hook = { workspace = true }
anyhow = { workspace = true }
