[package]
name = "proteus-ui"
description = "Layer 2: metamorphic component model, transition topologies"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
proteus-render = { path = "../proteus-render" }
bevy_ecs = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
