[package]
name = "proteus-ui"
description = "Layer 2: metamorphic component model, transition topologies"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
proteus-render = { path = "../proteus-render" }
bevy_ecs = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
# Integration tests construct World and glam types directly, and reference
# QuadPipeline constants for UV sentinel assertions.
bevy_ecs = { workspace = true }
glam = { workspace = true }
proteus-render = { path = "../proteus-render" }
